# my-own-lisp

./: .gitignore  README.md  TODO.md  config.h  first-test-program.mlisp  main.c  meson.build  prelude.mlisp  test-program-errors.mlisp  test-program-print.mlisp
interpreter/: interpreter.c  interpreter.h  meson.build
mpc/: meson.build
parser/: meson.build  parser.c  parser.h
tui/: README.md  input_reader.c  input_reader.h  meson.build
